slightly better formatting

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 <body>
 
   <form id="urlForm">
-    <label>RTMP URL:</label> <input id="rtmpUrl" type="text" name="rtmpUrl" value=""/>
+    <label>RTMP URL:</label>
+    <input id="rtmpUrl" style="width: 50%" type="text" name="rtmpUrl" value=""/>
     <button type="submit">Play</button>
   </form>
 
@@ -37,7 +38,7 @@
       <source id="videoJSSource" type="rtmp/mp4" />
       <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
     </video>
-    <p><strong>Note:</strong> Because of <a href="https://github.com/videojs/video-js-swf/issues/55">this bug</a>, you'll need to go to full-screen then back again.</p>
+    <p><strong>Note:</strong> Because of <a href="https://github.com/videojs/video-js-swf/issues/55">this bug</a>, you may need to go to full-screen then back again.</p>
   </div>
 
   <div style="vertical-align: top; display: inline-block; margin-right: 50px;">
