another FCsubscribe for FlowPlayer

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       // play in FlowPlayer
       flowplayer("rtmpplayer", "http://releases.flowplayer.org/swf/flowplayer-3.2.18.swf", {
         plugins: {
+          subscribe: true,
           rtmp: {
             url: "http://releases.flowplayer.org/swf/flowplayer.rtmp-3.2.13.swf"
           }
